Update channel names to be more informative
Rather than relying on a single level of channel namespace based on PID, this reflects the serverID and a variable base namespace to allow for further customization.

This includes improvements to allow for commands to be used on specific servers rather than any server in a shared command channel.
